--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-alice-carousel": "^1.19.3",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
+    "react-screen-orientation": "0.0.4",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
   },
