--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "doodle-disco-app-002",
   "version": "0.1.0",
+  "engines": {
+    "node": "16.11.1"
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
