--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "doodle-disco-app-002",
   "version": "0.1.0",
-  "homepage": "https://zoltanalmodo.github.io/doodle-disco-app-002",
   "engines": {
     "node": "20.17.0"
   },
   "private": true,
+  "homepage": "https://zoltanalmodo/doodle-disco-app-002",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
