homepage address check

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "node": "20.17.0"
   },
   "private": true,
-  "homepage": "https://zoltanalmodo.github.io/doodle-disco-app-002/",
+  "homepage": "https://zoltanalmodo.github.io/doodle-disco-app-002",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
