--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "ddisco-003",
-  "version": "0.2cd.0",
+  "name": "ddisco",
+  "version": "0.2.0",
   "engines": {
     "node": "20.17.0"
   },
   "private": true,
-  "homepage": "https://zoltanalmodo.github.io/ddisco-003/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
     "axios": "^1.7.8",
-    "mongodb": "^6.12.0",
     "react": "^17.0.1",
     "react-alice-carousel": "^1.19.3",
     "react-dom": "^17.0.1",
@@ -20,14 +18,10 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "NODE_OPTIONS=--openssl-legacy-provider concurrently \"npm run server\" \"npm run client\"",
-    "server": "cd backend && nodemon server.js",
-    "client": "react-scripts start",
-    "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -48,7 +42,6 @@
     ]
   },
   "devDependencies": {
-    "concurrently": "^9.1.0",
-    "gh-pages": "^6.2.0"
+    "concurrently": "^9.1.0"
   }
 }
