--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -1,8 +1,9 @@
 {
-    "name": "ddisco-api",
-    "version": "1.0.0",
-    "dependencies": {
-      "mongoose": "^6.12.0",
-      "dotenv": "^16.0.0"
-    }
+  "name": "ddisco-api",
+  "version": "1.0.0",
+  "dependencies": {
+    "mongoose": "^8.8.3",
+    "dotenv": "^16.4.5",
+    "mongodb": "^6.12.0"
   }
+}
