--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
     "axios": "^1.7.8",
+    "glob": "^11.0.1",
     "react": "^17.0.1",
     "react-alice-carousel": "^1.19.3",
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "^3.0.1",
+    "rimraf": "^6.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
